[package]
name = "alphabet_soup"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.3"

[dev-dependencies]
colored = "2.0.0"
criterion = "0.3.5"
rand = {version = "0.8.0", features = ["small_rng"]}
rand_distr = "0.4.3"


[[bench]]
name = "throughput"
harness = false

[features]
f64 = []